--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -79,7 +79,10 @@
 /* ------------------------------------- */
 /* SEARCH BAR                            */
 /* ------------------------------------- */
-
+input {
+  border-radius: 10px;
+  margin: 10px;
+}
 .search-bar {
   background-color: olivedrab;
   display: flex;
@@ -100,6 +103,7 @@
     display: flex;
     flex-basis: 100%;
     justify-content: center;
+    align-items: center;
   }
 
   &__form-label {
