--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -6,19 +6,19 @@
   overflow: hidden; /* Si el contenido ocupa más espacio que el tamaño del contenedor. Queda oculto */
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
-  background-color: orange;
-  box-shadow: 0 1px 5px rgba(0,0,0, .2), 0 0 3px rgba(0,0,0, .3);
 
-  transition: all .2s;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2), 0 0 3px rgba(0, 0, 0, 0.3);
+
+  transition: all 0.2s;
 
   &:hover,
   &:focus {
     transform: scale(1.03) skewX(0);
     transform-origin: bottom;
-    box-shadow: 0 7px 8px rgba(0,0,0, .05), 0 3px 3px rgba(0,0,0, .01);
+    box-shadow: 0 7px 8px rgba(0, 0, 0, 0.05), 0 3px 3px rgba(0, 0, 0, 0.01);
   }
 
-  &:nth-child(5n + 1) {
+  /*   &:nth-child(5n + 1) {
     background-image: linear-gradient(to top, #aaafad 0%, #60efff 30%);
   }
 
@@ -37,7 +37,7 @@
   &:nth-child(5n + 5) {
     background-image: linear-gradient(to top, #ff0f7b 0%, #f89b29 30%);
   }
-
+ */
   &__image-container {
     height: 200px;
     background-color: blue;
@@ -47,14 +47,14 @@
 
   &:hover &__image-container,
   &:focus &__image-container {
-    clip-path: polygon(0 0, 100% 0, 100% 190px, 0 200px);
+    clip-path: polygon(0 0, 100% 0, 100% 200px, 0 200px);
   }
 
   &__image {
     width: 100%;
     height: 100%; /* 200px */
     object-fit: cover;
-    transition: .2s;
+    transition: 0.2s;
   }
 
   &:hover &__image,
@@ -68,7 +68,8 @@
   }
 
   @media (min-width: 1024px) {
-    & { /* .card */
+    & {
+      /* .card */
       min-width: 240px;
     }
   }
@@ -80,7 +81,8 @@
       height: 200px;
     }
 
-    &__article { /* .card__article */
+    &__article {
+      /* .card__article */
       display: flex;
     }
 
@@ -88,7 +90,7 @@
       width: 40%;
       clip-path: polygon(0 0, 100% 0, 95% 100%, 0% 100%);
     }
-    
+
     &:hover &__image-container, /* .card:hover .card__image-container */
     &:focus &__image-container {
       width: 40%;
