--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -6,9 +6,17 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    background-position: center center;
     height: 500px;
     text-align: center;
     margin-bottom: 20px;
+    margin-top: 2px;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
+}
+
+p {
 }
