color de fondo whitesmoke

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -100,7 +100,7 @@
 
   &__form-container {
     /* 4to Camabio */
-    background-color: rgb(235, 239, 248);
+    background-color: whitesmoke;
     display: flex;
     flex-basis: 100%;
     justify-content: center;
