--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -1,5 +1,6 @@
 .section-cards {
   padding: 0%;
+
   &__header {
     background-image: url("../img/banner.png");
     color: #ffffff;
@@ -18,5 +19,10 @@
   }
 }
 
-p {
+.cards-container {
+  border: solid 2px black;
+  width: 85%;
+  margin: auto;
+  padding: 25px;
+  margin-bottom: 20px;
 }
