Agregamos footer, modificamos cards

--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -29,7 +29,7 @@
     top: -50%;
     width: 100%;
     height: 100%;
-    background: #135ff7;
+    background: #1d74a9;
     transform: skewY(345deg);
     transition: 0.5s;
   }
