--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -38,7 +38,7 @@
 
 .nav-bar {
   /*--3er CAMBIO--*/
-  background-color: rgba(26, 31, 12, 1);
+  background-color: #171717;
 
   &__nav-list {
     display: flex;
