--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -19,11 +19,11 @@
   }
 }
 
-/* .cards-container {
+.cards-container {
   border: solid 2px black;
-  width: 85%;
+  width: 95%;
   margin: auto;
   padding: 25px;
   margin-bottom: 20px;
+  margin-top: 50px;
 }
- */
