--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -61,6 +61,10 @@ footer {
       gap: 0.75rem;
       list-style: none;
 
+      p {
+        color: #a8a29e;
+      }
+
       .footer-link {
         color: #a8a29e;
         transition: all 0.4s;
