--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -20,10 +20,21 @@
 }
 
 .cards-container {
-  border: solid 2px black;
   width: 95%;
   margin: auto;
   padding: 25px;
   margin-bottom: 20px;
   margin-top: 50px;
+  background-color: #d2d1d1;
+  box-shadow: 5px 5px 20px rgba(32, 32, 32, 0.575);
+  border-radius: 10px;
+}
+
+@media (max-width: 768px) {
+  .section-cards__header {
+    background-size: 100%;
+    height: 150px;
+
+    background-attachment: scroll;
+  }
 }
